Redmine Issue 905; PURPOSE:  RelatedMedia.cfm; The multizoom class="thumbs" cannot have a width if it is to be responsively designed.

--- a/lib/misc/multizoom/multizoom.css
+++ b/lib/misc/multizoom/multizoom.css
@@ -25,7 +25,8 @@
 
 .thumbs { /* divs holding the trigger links - styles optional, used here to center their links below their respective zoomable image */
 	padding-top: 25px;
-	width: 500px;
+	width: auto;
+/*	width: 500px;  --- this cannot have a width for responsive design*/
 	text-align: center;
 }
 
