--- a/lib/misc/multizoom/multizoom.css
+++ b/lib/misc/multizoom/multizoom.css
@@ -25,7 +25,7 @@
 
 .thumbs { /* divs holding the trigger links - styles optional, used here to center their links below their respective zoomable image */
 	padding-top: 25px;
-	width: auto;
+	width: 100%;
 /*	width: 500px;  --- this cannot have a width for responsive design*/
 	text-align: center;
 }
