--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2998,11 +2998,11 @@ and also iPads specifically.
 		padding-right: 3px;
 	}
 }
-@media only screen and (max-width: 1250px) {
+/*@media only screen and (max-width: 1250px) {
 	.variedHeight {
 		height: 205px;
 	}
-}
+}*/
 @media only screen and (max-width: 990px) {
 	input#searchText.form-control {
 		min-width: auto;
