--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2625,9 +2625,9 @@ table.tablesection td {
 tr.line-top-sd {
 	border-top: 2px solid #e8eaeb!important;
 }
-.variedHeight {
+/*.variedHeight {
 	height: 225px;
-}
+}*/
 /****************end all screen styles*********************/
 /**********************************************************/
 /*********************************/
