Redmine Issue 905; PURPOSE:  RelatedMedia.cfm; Not the last for variedHeight yet.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2894,19 +2894,24 @@ and also iPads specifically.
 		padding-right: 3px;
 	}
 }
-@media only screen and (min-width: 1467px) {
+@media only screen and (min-width: 1470px) {
 	.variedHeight {
-		height: 220px;
+		height: 230px;
 	}
 }
-@media only screen and (max-width: 1466px) {
+@media only screen and (min-width: 1466px) {
 	.variedHeight {
-		height: 285px;
+		height: 238px;
+	}
+}
+@media only screen and (max-width: 1465px) {
+	.variedHeight {
+		height: 250px;
 	}
 }
 @media only screen and (max-width: 1379px) {
 	.variedHeight {
-		height: 280px;
+		height: 255px;
 	}
 	ol.flowXXS, ul.flowXXS {
 		display:flex;
@@ -3014,7 +3019,7 @@ and also iPads specifically.
 }
 @media only screen and (max-width: 1200px) {
 	.variedHeight {
-		height: 210px;
+		height: 282px;
 	}
 }
 @media only screen and (max-width: 995px) {
