Redmine Issue 780: Media: Redesign Create/Edit Media record forms

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -101,10 +101,10 @@ table td .small {
 	border: 1px solid green !important;
 }
 .border-lt-gray {
-	border: 1px solid #dbe0e1;
+	border: 1px solid #a19d9e;
 }
 .bg-lt-gray {
-	background-color: #dbe0e1;
+	background-color: #a19d9e;
 }
 .border-wide-green {
 	border: 2px solid green !important;
