Redmine Issue 780: Media: Redesign Create/Edit Media record forms

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2648,6 +2648,35 @@ tr.line-top-sd {
 /*.variedHeight {
 	height: 225px;
 }*/
+
+.imageFeatures {
+	width: 100%;
+	border: 2px solid gray;
+}
+.imagewrapper {
+	position: relative;
+	display: inline-block;
+	font-size: 0;
+}
+.imagewrapper .close {
+	position: absolute;
+	top: 2px;
+	right: 3px;
+	z-index: 100;
+	background-color: #FFF;
+	padding: 4px 2px 7px;
+	color: #000;
+	font-weight: bold;
+	cursor: pointer;
+	opacity: .2;
+	text-align: center;
+	font-size: 22px;
+	line-height: 10px;
+	border-radius: 50%;
+}
+.imagewrapper:hover .close {
+	opacity: 1;
+}
 /****************end all screen styles*********************/
 /**********************************************************/
 /*********************************/
