--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -3595,3 +3595,14 @@ and also iPads specifically.
 		padding:1em;
 }
 /* end styles for locality maps */
+
+/* style for geolocate frame */
+.editFrame {
+	border-top: 1px solid gray;
+	position: fixed;
+	top: 40px;
+	left: 2%;
+	width: 95%;
+	height: 90%;
+	z-index: 9998;
+}
