Bugfix ISSUE: Redmine 831 PURPOSE: edit locality, georeferencing DESCRIPTION: missing styles for geolocate frame.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -3597,6 +3597,17 @@ and also iPads specifically.
 /* end styles for locality maps */
 
 /* styles for geolocate frame */
+.editAppBox {
+	border: 1px solid gray;
+	z-index: 9998;
+	position: fixed;
+	top: 1%;
+	left: 2%;
+	width: 95%;
+	height: 96%;
+	background-color: lightgray;
+	overflow: auto;
+}
 .editFrame {
 	border-top: 1px solid gray;
 	position: fixed;
@@ -3622,5 +3633,13 @@ and also iPads specifically.
 	top: 0;
 	width: 30px;
 	z-index: 10999;
+}
+.centeredImage {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-top: -25px;
+	margin-left: -100px;
+	border: 1px solid white;
 }
 /* end styles for geolocate frame */
