ISSUE: Redmine 831 PURPOSE: edit locality, georeferences DESCRIPTION: Clearer marking of disabled fields with background.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -94,6 +94,9 @@ table td .small {
 .bg-verylightgreen {
 	background-color: #EBFFEB !important;
 }
+.bg-lt-gray {
+	background-color: #F0F3F7 !important;
+}
 .border-white {
 	border: 1px solid white;
 }
