Redesign #831: Redesign edit locality/collecting event pages; styling pages

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -115,6 +115,9 @@ table td .small {
 .border-wide-grey {
 	border: 2px solid darkgrey !important;
 }
+.border-bottom-grey {
+	border: 2px solid #bac5c6 !important;
+}
 .border-wide-ltgrey {
 	border: 2px solid #dbe0e1 !important;
 }
