--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -116,7 +116,7 @@ table td .small {
 	border: 2px solid darkgrey !important;
 }
 .border-bottom-grey {
-	border: 2px solid #bac5c6 !important;
+	border-bottom: 2px solid #bac5c6 !important;
 }
 .border-wide-ltgrey {
 	border: 2px solid #dbe0e1 !important;
