Test of color change on visited links. Accessibility contrast has been considered and user expectations of color.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -48,6 +48,9 @@ table#t {
 a {
 	cursor: pointer;
 }
+a:visited {
+	color: #3f0773;
+}
 .blueFocus a:focus {
 	box-shadow: 0 0 0 0.18rem rgb(0 123 255 / 20%);
 } 
@@ -71,6 +74,7 @@ a.external:visited:after {
 a.external:hover:visited:after {
 	text-decoration: none !important;
 	content: "\a0"url(/shared/images/linkOutHover.gif);
+	color: #3f0773;
 }
 .imgsize {
 	width: 31.15%;
