Test of one move link visited color.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -49,8 +49,7 @@ a {
 	cursor: pointer;
 }
 a:visited {
-	color: #3f0773;
-	color: #4d1d7a;
+	color: #6b2ca6;
 }
 .blueFocus a:focus {
 	box-shadow: 0 0 0 0.18rem rgb(0 123 255 / 20%);
@@ -75,8 +74,7 @@ a.external:visited:after {
 a.external:hover:visited:after {
 	text-decoration: none !important;
 	content: "\a0"url(/shared/images/linkOutHover.gif);
-	color: #3f0773;
-	color: #4d1d7a;
+	color: #6b2ca6;
 }
 .imgsize {
 	width: 31.15%;
