--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -527,6 +527,10 @@ span.data-entry-addon {
 	box-shadow: 0 0 0 0.02rem rgba(255, 255, 255, 0.5);
 	box-shadow: none;
 }
+.jqx-grid-cell a:visited {
+	padding-left: .3rem;
+	color: purple;
+}
 .text-success {
 	color: #1e5d16 !important;
 	color: #18780b !important;
