Grid links or accessibility AAA > 7 contrast

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -521,7 +521,7 @@ span.data-entry-addon {
 }
 .jqx-grid-cell a {
 	padding-left: .3rem;
-	color: #064e9b;
+	color: #07417e;
 }
 .jqx-grid-cell a:visited {
 	color: purple;
