Accessibility for links for each state with different backgrounds in grid and elsewhere.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -543,6 +543,7 @@ span.data-entry-addon {
 }
 .jqx-grid-cell a {
 	margin-left: .2rem;
+	margin-right: .2rem;
 	color: #02458c;
 }
 .jqx-grid-cell a:link, .jqx-grid-cell a.link {
