Accessibility for links for each state with different backgrounds in grid and elsewhere.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -5,10 +5,10 @@ body, html {
 	font-size: 15px;
 }
 a {
-	color: #034893;
+	color: #0460c1;
 }
 a:link {
-	color: #034893;
+	color: #0460c1;
 }
 a:visited {
 	color: purple;
@@ -21,7 +21,7 @@ a:focus {
 	color: #034893;
 }
 a:active {
-	color: #034893;
+	color: #0460c1;
 }
 a.btn-info {
 	color: white;
@@ -544,10 +544,10 @@ span.data-entry-addon {
 .jqx-item a {
 	margin-left: .2rem;
 	margin-right: .2rem;
-	color: #034893;
+	color: #0460c1;
 }
 .jqx-item a:link, .jqx-item a.link {
-	color: #034893;
+	color: #0460c1;
 }
 .jqx-item a:visited,.jqx-item a.visited {
 	color: purple;
@@ -563,7 +563,7 @@ span.data-entry-addon {
 	color: #0b5aaf;
 }
 .jqx-item a:active {
-	color: #034893;
+	color: #0460c1;
 }
 .text-success {
 	/*color: #1e5d16 !important;*/
