--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -238,8 +238,7 @@ h1.h4 {
 	color: #524e4e;
 }
 .btn-link, .helpText, .fas-info {
-	color: #036ee0;
-	color: #0251a5 !important;
+	color: #0460c1 !important;
 }
 span.caps {
 	text-transform: capitalize;
